--- a/configs/gop_kaldi_labels.yaml
+++ b/configs/gop_kaldi_labels.yaml
@@ -1,6 +1,6 @@
 ---
-  data-dir:                      "data/"
-  libri-phones-path:             "librispeech_models/exp/chain_cleaned/tdnn_1d_sp/phones.txt"
-  libri-phones-to-pure-int-path: "phones/kaldi/phone-to-pure-phone.int"
-  libri-chain-mdl-path:          "librispeech_models/exp/chain_cleaned/tdnn_1d_sp/final.mdl"
-  phones-list-path:              "phones/kaldi/phones-list.txt"
+  data-dir:                      "./data/"
+  libri-phones-path:             "./librispeech_models/exp/chain_cleaned/tdnn_1d_sp/phones.txt"
+  libri-phones-to-pure-int-path: "./phones/kaldi/phone-to-pure-phone.int"
+  libri-chain-mdl-path:          "./librispeech_models/exp/chain_cleaned/tdnn_1d_sp/final.mdl"
+  phones-list-path:              "./phones/kaldi/phones-list.txt"
